--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       context: .
       args:
         VERSION: "7.1"
+        PHP_EXTENSIONS: "gd intl mbstring pdo_mysql pdo_pgsql xsl zip soap bcmath pcntl mcrypt"
       dockerfile: cli/Dockerfile
   php-72-cli:
     image: ashsmith/php:7.2-cli
@@ -18,6 +19,7 @@ services:
       context: .
       args:
         VERSION: "7.2"
+        PHP_EXTENSIONS: "gd intl mbstring pdo_mysql pdo_pgsql xsl zip soap bcmath pcntl"
       dockerfile: cli/Dockerfile
 
 
@@ -30,11 +32,13 @@ services:
       context: .
       args:
         VERSION: "7.1"
+        PHP_EXTENSIONS: "gd intl mbstring pdo_mysql pdo_pgsql xsl zip soap bcmath pcntl mcrypt"
       dockerfile: fpm/Dockerfile
   php-72-fpm:
     image: ashsmith/php:7.2-fpm
     build:
       context: .
       args:
-        - VERSION=7.2
+        VERSION: "7.2"
+        PHP_EXTENSIONS: "gd intl mbstring pdo_mysql pdo_pgsql xsl zip soap bcmath pcntl"
       dockerfile: fpm/Dockerfile
