--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       context: .
       args:
         VERSION: "7.1"
-        PHP_EXTENSIONS: "gd intl mbstring pdo_mysql pdo_pgsql xsl zip soap bcmath pcntl mcrypt"
+        PHP_EXTENSIONS: "dom gd intl mbstring pdo_mysql pdo_pgsql xsl zip soap bcmath pcntl mcrypt"
       dockerfile: cli/Dockerfile
   php-72-cli:
     image: ashsmith/php:7.2-cli
@@ -19,7 +19,7 @@ services:
       context: .
       args:
         VERSION: "7.2"
-        PHP_EXTENSIONS: "gd intl mbstring pdo_mysql pdo_pgsql xsl zip soap bcmath pcntl"
+        PHP_EXTENSIONS: "dom gd intl mbstring pdo_mysql pdo_pgsql xsl zip soap bcmath"
       dockerfile: cli/Dockerfile
 
 
@@ -32,7 +32,7 @@ services:
       context: .
       args:
         VERSION: "7.1"
-        PHP_EXTENSIONS: "gd intl mbstring pdo_mysql pdo_pgsql xsl zip soap bcmath pcntl mcrypt"
+        PHP_EXTENSIONS: "dom gd intl mbstring pdo_mysql pdo_pgsql xsl zip soap bcmath pcntl mcrypt"
       dockerfile: fpm/Dockerfile
   php-72-fpm:
     image: ashsmith/php:7.2-fpm
@@ -40,5 +40,5 @@ services:
       context: .
       args:
         VERSION: "7.2"
-        PHP_EXTENSIONS: "gd intl mbstring pdo_mysql pdo_pgsql xsl zip soap bcmath pcntl"
+        PHP_EXTENSIONS: "dom gd intl mbstring pdo_mysql pdo_pgsql xsl zip soap bcmath"
       dockerfile: fpm/Dockerfile
