--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,7 +32,7 @@ services:
       context: .
       args:
         VERSION: "7.1"
-        PHP_EXTENSIONS: "dom gd intl mbstring pdo_mysql pdo_pgsql xsl zip soap bcmath pcntl mcrypt"
+        PHP_EXTENSIONS: "dom gd intl mbstring pdo_mysql pdo_pgsql xsl zip soap bcmath pcntl mcrypt opcache"
       dockerfile: fpm/Dockerfile
   php-72-fpm:
     image: ashsmith/php:7.2-fpm
@@ -40,5 +40,5 @@ services:
       context: .
       args:
         VERSION: "7.2"
-        PHP_EXTENSIONS: "dom gd intl mbstring pdo_mysql pdo_pgsql xsl zip soap bcmath"
+        PHP_EXTENSIONS: "dom gd intl mbstring pdo_mysql pdo_pgsql xsl zip soap bcmath opcache"
       dockerfile: fpm/Dockerfile
