Migrate to alpine based images
Resolves #5

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,41 +1,44 @@
-version: 2
+version: 2.1
+
+commands:
+  build_and_push:
+    description: "Build & Push docker-compose images"
+    parameters:
+      variant:
+        type: string
+    steps:
+      - checkout:
+          path: ~/ashsmith-docker-php
+      - run: |
+          docker login -u $DOCKER_USER -p $DOCKER_PASS
+          export VARIANT=<< parameters.variant >>
+          docker-compose build php-$VARIANT-fpm php-$VARIANT-cli php-$VARIANT-fpm-xdebug php-$VARIANT-cli-xdebug
+          docker-compose push php-$VARIANT-fpm php-$VARIANT-cli php-$VARIANT-fpm-xdebug php-$VARIANT-cli-xdebug
+
 jobs:
-  build_cli:
+  build_71:
     machine: true
     working_directory: ~/ashsmith-docker-php/
     steps:
-      - checkout:
-          path: ~/ashsmith-docker-php
-      - run:
-          name: Build and push Images
-          command: |
-            docker login -u $DOCKER_USER -p $DOCKER_PASS
-            docker-compose build php-71-cli php-72-cli
-            docker-compose push php-71-cli php-72-cli
-  build_fpm:
+      - build_and_push:
+          variant: '71'
+  build_72:
     machine: true
     working_directory: ~/ashsmith-docker-php/
     steps:
-      - checkout:
-          path: ~/ashsmith-docker-php
-      - run:
-          name: Build and push Images
-          command: |
-            docker login -u $DOCKER_USER -p $DOCKER_PASS
-            docker-compose build php-71-fpm php-72-fpm
-            docker-compose push php-71-fpm php-72-fpm
+      - build_and_push:
+          variant: '72'
+  build_73:
+    machine: true
+    working_directory: ~/ashsmith-docker-php/
+    steps:
+      - build_and_push:
+          variant: '73'
 
 workflows:
   version: 2
   btd:
     jobs:
-      - build_cli:
-          filters:
-            branches:
-              only:
-                - master
-      - build_fpm:
-          filters:
-            branches:
-              only:
-                - master
+      - build_71
+      - build_72
+      - build_73
