--- a/fpm/Dockerfile
+++ b/fpm/Dockerfile
@@ -3,6 +3,11 @@ FROM php:${VERSION}-fpm-alpine
 ARG XDEBUG
 ARG PHP_EXTENSIONS
 
+ENV PHP_OPCACHE_VALIDATE_TIMESTAMPS="0" \
+    PHP_OPCACHE_MAX_ACCELERATED_FILES="16000" \
+    PHP_OPCACHE_MEMORY_CONSUMPTION="192" \
+    PHP_OPCACHE_MAX_WASTED_PERCENTAGE="10"
+
 # Install dependencies
 RUN apk add --no-cache \
     mysql-client \
@@ -21,8 +26,8 @@ RUN adduser -D -g 1000 -u 1000 -h /var/www -s /bin/bash app && \
   chown -R app:app /var/www /var/www/html /var/www/bin
 
 # A few sensible defaults.
-ADD fpm/config/php-fpm.conf /usr/local/etc/
-ADD fpm/config/opcache.ini /usr/local/etc/php/conf.d/aa-opcache.ini
+COPY fpm/config/php-fpm.conf /usr/local/etc/
+COPY fpm/config/opcache.ini /usr/local/etc/php/conf.d/aa-opcache.ini
 RUN touch /usr/local/etc/php/conf.d/opcache.blacklist
 USER app:app
 
