--- a/cli/config/opcache.ini
+++ b/cli/config/opcache.ini
@@ -7,9 +7,17 @@ opcache.max_accelerated_files   = ${PHP_OPCACHE_MAX_ACCELERATED_FILES}
 opcache.max_wasted_percentage   = ${PHP_OPCACHE_MAX_WASTED_PERCENTAGE}
 opcache.fast_shutdown           = 1
 
+opcache.use_cwd             = 1
 opcache.validate_timestamps = ${PHP_OPCACHE_VALIDATE_TIMESTAMPS}
 opcache.revalidate_freq     = 0
+opcache.revalidate_path     = 1
+
+; Applications might use comments in class reflections
+opcache.save_comments = 1
+opcache.load_comments = 1
 
 ; Log & blacklist paths
+opcache.log_verbosity_level = 1
 opcache.error_log           = /proc/self/fd/2
 opcache.blacklist_filename  = /usr/local/etc/php/conf.d/opcache.blacklist
+
