Don't expose circleci password insecurely.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ commands:
       - checkout:
           path: ~/ashsmith-docker-php
       - run: |
-          docker login -u $DOCKER_USER -p $DOCKER_PASS
+          echo "$DOCKER_PASS" | docker login -u $DOCKER_USER --password-stdin
           export BRANCH=''
           if [ "$CIRCLE_BRANCH" != "master" ]; then
             export BRANCH="-${CIRCLE_BRANCH}"
