--- a/fpm/Dockerfile.alpine
+++ b/fpm/Dockerfile.alpine
@@ -1,5 +1,5 @@
 ARG VERSION=latest
-FROM php:${VERSION}-fpm
+FROM php:${VERSION}-fpm-alpine
 ARG XDEBUG
 ARG PHP_EXTENSIONS
 
@@ -9,18 +9,18 @@ ENV PHP_OPCACHE_VALIDATE_TIMESTAMPS="0" \
     PHP_OPCACHE_MAX_WASTED_PERCENTAGE="10"
 
 # Install dependencies
-RUN apt-get update -y && apt-get install -y \
-    default-mysql-client \
-    libfreetype6-dev libjpeg62-turbo-dev \
-    libpng-dev libicu-dev  libpng-dev \
-    libmcrypt-dev libxslt-dev libzip-dev procps && \
-    apt-get install -y $PHPIZE_DEPS && \
+RUN apk add --no-cache \
+    mysql-client \
+    freetype-dev libjpeg-turbo-dev \
+    libpng-dev icu-dev  libpng-dev \
+    libmcrypt-dev libxslt-dev libzip-dev \
+    ssmtp procps && \
+  apk add --virtual build-deps $PHPIZE_DEPS && \
   docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ --with-png-dir=/usr/include/ && \
-  docker-php-ext-install -j$(nproc) ${PHP_EXTENSIONS} && \
+  docker-php-ext-install -j$(nproc) $PHP_EXTENSIONS && \
   pecl install apcu && docker-php-ext-enable apcu && \
   if [ "$XDEBUG" = "1" ]; then pecl install -o -f xdebug && docker-php-ext-enable xdebug; fi && \
-  apt-get remove -y $PHPIZE_DEPS && \
-  rm -rf /var/lib/apt/lists/* && \
+  apk del build-deps && \
   curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
 
 RUN mkdir -p /var/www/html /var/www/bin
