--- a/fpm/Dockerfile.alpine
+++ b/fpm/Dockerfile.alpine
@@ -13,15 +13,14 @@ RUN apk add --no-cache \
     mysql-client \
     freetype-dev libjpeg-turbo-dev \
     libpng-dev icu-dev  libpng-dev \
-    libmcrypt-dev libxslt-dev libzip-dev \
-    ssmtp procps && \
-  apk add --virtual build-deps $PHPIZE_DEPS && \
-  docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ --with-png-dir=/usr/include/ && \
-  docker-php-ext-install -j$(nproc) $PHP_EXTENSIONS && \
-  pecl install apcu && docker-php-ext-enable apcu && \
-  if [ "$XDEBUG" = "1" ]; then pecl install -o -f xdebug && docker-php-ext-enable xdebug; fi && \
-  apk del build-deps && \
-  curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
+    libmcrypt-dev libxslt-dev libzip-dev procps \
+  && apk add --virtual build-deps $PHPIZE_DEPS \
+  && docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ --with-png-dir=/usr/include/ \
+  && docker-php-ext-install -j$(nproc) $PHP_EXTENSIONS \
+  && pecl install apcu && docker-php-ext-enable apcu \
+  && if [ "$XDEBUG" = "1" ]; then pecl install -o -f xdebug && docker-php-ext-enable xdebug; fi \
+  && apk del build-deps \
+  && curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
 
 RUN mkdir -p /var/www/html /var/www/bin
 
