Fixes php 7.4 builds

--- a/fpm/Dockerfile.alpine
+++ b/fpm/Dockerfile.alpine
@@ -13,9 +13,10 @@ RUN apk add --no-cache \
     mysql-client \
     freetype-dev libjpeg-turbo-dev \
     libpng-dev icu-dev  libpng-dev \
-    libmcrypt-dev libxslt-dev libzip-dev procps \
+    libmcrypt-dev libxslt-dev libzip-dev procps oniguruma-dev \
   && apk add --virtual build-deps $PHPIZE_DEPS \
-  && docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ --with-png-dir=/usr/include/ \
+  && if [ "$VERSION" = "7.3" ]; then docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ --with-png-dir=/usr/include/; fi \
+  && if [ "$VERSION" = "7.4" ]; then docker-php-ext-configure gd --with-freetype=/usr/include/ --with-jpeg=/usr/include/; fi \
   && docker-php-ext-install -j$(nproc) $PHP_EXTENSIONS \
   && pecl install apcu && docker-php-ext-enable apcu \
   && if [ "$XDEBUG" = "1" ]; then pecl install -o -f xdebug && docker-php-ext-enable xdebug; fi \
