--- a/cli/Dockerfile.alpine
+++ b/cli/Dockerfile.alpine
@@ -14,12 +14,13 @@ RUN apk add --no-cache \
     mysql-client bash \
     freetype-dev libjpeg-turbo-dev \
     libpng-dev icu-dev  libpng-dev \
-    libmcrypt-dev libxslt-dev libzip-dev procps \
+    libmcrypt-dev libxslt-dev libzip-dev procps oniguruma-dev \
   && wget -q -O /etc/apk/keys/sgerrand.rsa.pub https://raw.githubusercontent.com/sgerrand/alpine-pkg-git-crypt/master/sgerrand.rsa.pub \
   && wget https://github.com/sgerrand/alpine-pkg-git-crypt/releases/download/0.6.0-r1/git-crypt-0.6.0-r1.apk \
   && apk add git-crypt-0.6.0-r1.apk \
   && apk add --virtual build-deps $PHPIZE_DEPS \
-  && docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ --with-png-dir=/usr/include/ \
+  && if [ "$VERSION" = "7.3" ]; then docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ --with-png-dir=/usr/include/; fi \
+  && if [ "$VERSION" = "7.4" ]; then docker-php-ext-configure gd --with-freetype=/usr/include/ --with-jpeg=/usr/include/; fi \
   && docker-php-ext-install -j$(nproc) $PHP_EXTENSIONS \
   && pecl install apcu && docker-php-ext-enable apcu \
   && if [ "$XDEBUG" = "1" ]; then pecl install -o -f xdebug && docker-php-ext-enable xdebug; fi \
