--- a/fpm/Dockerfile
+++ b/fpm/Dockerfile
@@ -13,9 +13,10 @@ RUN apt-get update -y && apt-get install -y \
     default-mysql-client \
     libfreetype6-dev libjpeg62-turbo-dev \
     libpng-dev libicu-dev  libpng-dev \
-    libmcrypt-dev libxslt-dev libzip-dev procps \
+    libmcrypt-dev libxslt-dev libzip-dev procps libonig-dev \
   && apt-get install -y $PHPIZE_DEPS \
-  && docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ --with-png-dir=/usr/include/ \
+  && if [ "$VERSION" = "7.3" ]; then docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ --with-png-dir=/usr/include/; fi \
+  && if [ "$VERSION" = "7.4" ]; then docker-php-ext-configure gd --with-freetype=/usr/include/ --with-jpeg=/usr/include/; fi \
   && docker-php-ext-install -j$(nproc) ${PHP_EXTENSIONS} \
   && pecl install apcu && docker-php-ext-enable apcu \
   && if [ "$XDEBUG" = "1" ]; then pecl install -o -f xdebug && docker-php-ext-enable xdebug; fi \
