Correctly configures GD library

--- a/cli/Dockerfile
+++ b/cli/Dockerfile
@@ -6,7 +6,8 @@ ARG XDEBUG
 ENV PHP_OPCACHE_VALIDATE_TIMESTAMPS="0" \
     PHP_OPCACHE_MAX_ACCELERATED_FILES="16000" \
     PHP_OPCACHE_MEMORY_CONSUMPTION="192" \
-    PHP_OPCACHE_MAX_WASTED_PERCENTAGE="10"
+    PHP_OPCACHE_MAX_WASTED_PERCENTAGE="10" \
+    VERSION=${VERSION}
 
 # Install dependencies
 RUN apt-get update -y && apt-get install -y \
